# npclassifier-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: mistaken-prediction.yml
.github/workflows/: ci.yml  coverage.yml  pages.yml
apps/web/: Cargo.toml  build.rs  index.html
apps/web-worker/: Cargo.toml
apps/web-worker/src/: lib.rs
apps/web/public/: style.css
apps/web/src/: actions.rs  app.rs  classifier.rs  hooks.rs  main.rs  presentation.rs  ui.rs
crates/cargo-npc/: Cargo.toml
crates/cargo-npc/src/: main.rs
crates/npclassifier-core/: Cargo.toml
crates/npclassifier-core/assets/: mock_fingerprints.json
crates/npclassifier-core/src/: classifier.rs  distillation.rs  error.rs  finge.rs  fingerprint.rs  lib.rs  mock.rs  model.rs  ontology.rs  packed.rs  reference.rs  runner.rs  voting.rs  web.rs
crates/npclassifier-core/src/assets/: index_v1.json
crates/npclassifier-train/: Cargo.toml
crates/npclassifier-train/src/: calibration.rs  data.rs  error.rs  evaluation.rs  lib.rs  main.rs  metric.rs  model.rs  quantization.rs  sync_best.rs  web_export.rs
