[package]
name = "npclassifier-web-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.82"
npclassifier-core = { path = "../../crates/npclassifier-core", features = ["fingerprints"] }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["DedicatedWorkerGlobalScope", "MessageEvent", "Response"] }

[lints]
workspace = true
