[package]
name = "npclassifier-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus.workspace = true
js-sys = "0.3.82"
npclassifier-core = { path = "../../crates/npclassifier-core", features = ["fingerprints"] }
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
serde_json.workspace = true
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["Blob", "BlobPropertyBag", "Clipboard", "Document", "Element", "ErrorEvent", "EventTarget", "HtmlAnchorElement", "HtmlElement", "HtmlTextAreaElement", "KeyboardEvent", "MessageEvent", "Navigator", "Response", "Url", "Window", "Worker", "WorkerOptions", "WorkerType"] }

[build-dependencies]
wasm-bindgen-cli-support = "0.2.105"

[lints]
workspace = true
