[package]
name = "npclassifier-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
burn-backend = ["dep:burn"]
demo-cli = ["dep:clap"]
distillation-dataset = [
    "dep:tokio",
    "dep:zenodo-rs",
]
fingerprints = ["dep:finge-rs", "dep:smiles-parser"]
reference-dataset = ["dep:clap", "dep:indicatif", "dep:tokio", "dep:zenodo-rs", "dep:zstd"]
runner = ["fingerprints", "dep:rayon", "dep:reqwest"]

[dependencies]
burn = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
finge-rs = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
ndarray.workspace = true
ndarray-npy.workspace = true
rayon = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
smiles-parser = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
zenodo-rs = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[[bin]]
name = "npclassifier-reference"
path = "src/bin/reference.rs"
required-features = ["reference-dataset"]

[[bin]]
name = "npclassifier-demo"
path = "src/bin/demo.rs"
required-features = ["demo-cli"]

[lints]
workspace = true
